<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5"
    >
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="124dp"
        android:layout_height="124dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/mail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/tvSlogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/Awesome"
        android:textSize="26dp"
        android:gravity="top"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="25dp"
        />
    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvSlogan"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/login"
        android:textSize="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="25dp"
        android:textStyle="bold"
        android:textColor="#4356B4"
        />
    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/email"
        android:textSize="14dp"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="25dp"
        android:textStyle="normal"
        android:textColor="#999999"
        />
    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:drawableEnd="@drawable/ic_outline_email_24"
        android:hint="youremail@gmail.com"
        android:textColor="@color/black"
        android:maxLines="1"
        android:lines="1"
        android:maxLength="50"
        />
    <TextView
        android:id="@+id/tvPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/Password"
        android:textSize="14dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="25dp"
        android:textStyle="normal"
        android:textColor="#999999"
        />
    <EditText
        android:id="@+id/edtPass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/tvPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:drawableEnd="@drawable/ic_baseline_key_24"
        android:hint="******"
        android:maxLines="1"
        android:lines="1"
        android:maxLength="20"
        />
    <TextView
        android:id="@+id/tvQuenMK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edtPass"
        android:text="@string/forgetPassword"
        android:textSize="14dp"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="25dp"
        android:textStyle="normal"
        android:textColor="#4356B4"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btDN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LogIn"
        app:layout_constraintTop_toBottomOf="@+id/tvQuenMK"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:background="@drawable/btn_customer"
        />
    <TextView
        android:id="@+id/tvDK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="Chưa có tài khoản? Đăng ký ngay"
        android:textSize="14dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="25dp"
        android:textStyle="normal"
        android:textColor="#999999"
        android:layout_marginBottom="10dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>