<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline01"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/guideline01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/butBackProfile"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="12dp"
            android:src="@drawable/previous" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/EditProfile"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSaveInfoUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="12dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="19sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_conner"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline01">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgUpdateUser"
                android:layout_marginTop="42dp"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/bg" />
            <ImageView
                android:id="@+id/imgCamera"
                android:layout_marginTop="-35dp"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_camera"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/FullName"
                android:textColor="#999999"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/edName"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginLeft="25dp"
                android:padding="0dp"
                android:background="@color/white"
                android:text="Vu Truong Giang"
                android:layout_marginTop="9dp"
                android:layout_marginRight="25dp"
                android:drawableEnd="@drawable/persion" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="25dp"
                android:background="#D2D2D2" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="30dp"
                android:text="@string/Number"
                android:textColor="#999999"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/edNumber"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:padding="0dp"
                android:background="@color/white"
                android:text="Vu Truong Giang"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="9dp"
                android:layout_marginRight="25dp"
                android:drawableEnd="@drawable/phone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="25dp"
                android:background="#D2D2D2" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="30dp"
                android:text="@string/Birthday"
                android:textColor="#999999"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/edBirthday"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:padding="0dp"
                android:background="@color/white"
                android:text="dd/MM/yyyy"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="9dp"
                android:layout_marginRight="25dp"
                android:drawableEnd="@drawable/birthday" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="25dp"
                android:background="#D2D2D2" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>