<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline01"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline02"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline03"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.13" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline04"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline05"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.23" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline02"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline01">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="12dp"
            android:text="@string/friends"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgMessage"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="12dp"
            android:src="@drawable/circle" />

        <ImageView
            android:layout_width="16dp"
            android:layout_height="15dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="22dp"
            android:src="@drawable/friends_blue" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/guideline04"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline03">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border_search">

            <EditText
                android:id="@+id/edSearch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="20dp"
                android:background="@color/white"
                android:drawableStart="@drawable/search"
                android:hint="@string/hintSearchMessage"
                android:textColor="#999999"
                android:textSize="16sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline05"
        android:background="@drawable/bg_conner">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayoutFriends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabSelectedTextColor="#4356B4"
                android:background="@drawable/bg_conner"/>
            <View
                android:id="@+id/view"
                android:background="#8F8A8A"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPagerFriends"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/tvFriendsSearch"
                android:textColor="#D2D2D2"
                android:visibility="gone"
                android:textStyle="bold"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="20dp"
                android:text="@string/FRIENDS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvDataSearchFriends"
                android:layout_marginTop="15dp"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <ImageView
                android:id="@+id/imgNoFindSearch"
                android:src="@drawable/search_gray"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/tvNoFindSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/noFindKQ"
                android:gravity="center"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>